--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,9 @@ build-backend = "setuptools.build_meta"
 name = "cookie-analyzer"
 version = "0.1.0"
 description = "Ein Tool zur Analyse von Cookies auf Websites."
+readme = "README.md"
+requires-python = ">=3.8"
+license = {text = "Apache License 2.0"}
 authors = [
     { name = "Ihr Name", email = "ihre.email@example.com" }
 ]
