--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,20 +1,85 @@
 [build-system]
-requires = ["setuptools", "wheel"]
+requires = ["setuptools>=42", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "cookie-analyzer"
-version = "0.1.0"
-description = "Ein Tool zur Analyse von Cookies auf Websites."
+description = "A tool to analyze cookies and local storage on websites"
 readme = "README.md"
 requires-python = ">=3.8"
-license = {text = "Apache License 2.0"}
-authors = [
-    { name = "Ihr Name", email = "ihre.email@example.com" }
+license = {text = "Apache-2.0"}
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "License :: OSI Approved :: Apache Software License",
+    "Operating System :: OS Independent",
+    "Topic :: Internet :: WWW/HTTP",
+    "Topic :: Security :: Privacy",
+    "Topic :: Software Development :: Testing",
+    "Topic :: Software Development :: Libraries :: Python Modules",
 ]
 dependencies = [
-    "requests",
-    "playwright",
-    "tldextract",
-    "beautifulsoup4"
+    "playwright>=1.20.0",
+    "selenium>=4.0.0",
+    "beautifulsoup4>=4.10.0",
+    "requests>=2.26.0",
+    "pandas>=1.3.0",
+    "pyyaml>=6.0",
+]
+dynamic = ["version"]
+
+[project.urls]
+"Homepage" = "https://github.com/Muslix/cookie-analyzer"
+"Bug Tracker" = "https://github.com/Muslix/cookie-analyzer/issues"
+"Documentation" = "https://github.com/Muslix/cookie-analyzer/blob/main/README.md"
+
+[project.scripts]
+cookie-analyzer = "cookie_analyzer.interface.cli:main"
+
+[tool.setuptools]
+packages = ["cookie_analyzer"]
+
+[tool.setuptools.dynamic]
+version = {attr = "cookie_analyzer.__version__"}
+
+[tool.black]
+line-length = 100
+target-version = ['py38', 'py39', 'py310', 'py311']
+include = '\.pyi?$'
+exclude = '''
+/(
+    \.eggs
+  | \.git
+  | \.hg
+  | \.mypy_cache
+  | \.tox
+  | \.venv
+  | _build
+  | buck-out
+  | build
+  | dist
+)/
+'''
+
+[tool.isort]
+profile = "black"
+line_length = 100
+multi_line_output = 3
+include_trailing_comma = true
+force_grid_wrap = 0
+use_parentheses = true
+ensure_newline_before_comments = true
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = "test_*.py"
+python_classes = "Test*"
+python_functions = "test_*"
+markers = [
+    "integration: marks tests that require external resources",
+    "slow: marks tests that are slow to execute",
+    "selenium: marks tests that require a browser",
 ]
