--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,7 @@ jobs:
     strategy:
       matrix:
         python-version: ['3.9', '3.10', '3.11']
+      fail-fast: false  # Continue with other versions if one fails
 
     steps:
     - uses: actions/checkout@v3
@@ -20,6 +21,7 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
+        cache: 'pip'  # Enable pip caching for faster installs
         
     - name: Install Chrome
       run: |
@@ -29,12 +31,12 @@ jobs:
         echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" | sudo tee /etc/apt/sources.list.d/google-chrome.list
         sudo apt-get update
         sudo apt-get install -y google-chrome-stable
+        google-chrome --version
     
     - name: Install ChromeDriver
       run: |
-        CHROME_VERSION=$(google-chrome --version | awk '{print $3}' | cut -d'.' -f1)
-        CHROMEDRIVER_VERSION=$(wget -qO- "https://chromedriver.storage.googleapis.com/LATEST_RELEASE_${CHROME_VERSION}")
-        echo "Installing ChromeDriver version ${CHROMEDRIVER_VERSION} to match Chrome ${CHROME_VERSION}"
+        # Use a fixed version of ChromeDriver that works with the installed Chrome
+        CHROMEDRIVER_VERSION=114.0.5735.90
         wget -q "https://chromedriver.storage.googleapis.com/${CHROMEDRIVER_VERSION}/chromedriver_linux64.zip"
         unzip chromedriver_linux64.zip
         sudo mv chromedriver /usr/local/bin/
@@ -50,9 +52,17 @@ jobs:
         
     - name: Run tests with coverage
       run: |
-        pytest --cov=cookie_analyzer tests/
+        pytest --cov=cookie_analyzer tests/ --cov-report=xml
         
-    - name: Upload coverage reports to Codecov
-      uses: codecov/codecov-action@v3
+    - name: Upload coverage report
+      uses: actions/upload-artifact@v3
       with:
-        fail_ci_if_error: false
+        name: coverage-report-python${{ matrix.python-version }}
+        path: coverage.xml
+        
+    # This step is commented out as it requires an external service registration
+    # - name: Upload coverage to Codecov
+    #   uses: codecov/codecov-action@v3
+    #   with:
+    #     file: ./coverage.xml
+    #     fail_ci_if_error: false
