--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -38,22 +38,24 @@ jobs:
         run: |
           # Simple test to verify the image runs
           docker run --rm cookie-analyzer:${{ github.sha }} --help || echo "Command returned non-zero, but container started"
-
-      - name: Login to GitHub Container Registry
-        if: github.event_name != 'pull_request'
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Push to GitHub Container Registry
-        if: github.event_name != 'pull_request'
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          push: true
-          tags: |
-            ghcr.io/${{ env.OWNER_LC }}/cookie-analyzer:latest
-            ${{ startsWith(github.ref, 'refs/tags/') && format('ghcr.io/{0}/cookie-analyzer:{1}', env.OWNER_LC, github.ref_name) || '' }}
-          cache-from: type=gha
+          
+      # GitHub Container Registry push removed for now to avoid authentication issues
+      # Uncomment when ready to push to GitHub Container Registry
+      # - name: Login to GitHub Container Registry
+      #   if: github.event_name != 'pull_request'
+      #   uses: docker/login-action@v2
+      #   with:
+      #     registry: ghcr.io
+      #     username: ${{ github.actor }}
+      #     password: ${{ secrets.GITHUB_TOKEN }}
+      # 
+      # - name: Push to GitHub Container Registry
+      #   if: github.event_name != 'pull_request'
+      #   uses: docker/build-push-action@v4
+      #   with:
+      #     context: .
+      #     push: true
+      #     tags: |
+      #       ghcr.io/${{ env.OWNER_LC }}/cookie-analyzer:latest
+      #       ${{ startsWith(github.ref, 'refs/tags/') && format('ghcr.io/{0}/cookie-analyzer:{1}', env.OWNER_LC, github.ref_name) || '' }}
+      #     cache-from: type=gha
